Initialize default audio device ID with explicit device ID.

This is more consistent with how video device IDs are specified and is
also a small first step towards implementing the standard constraints
algorithm for audio.
This CL disables a misleading selector that allows switching the
user-preferred device in the middle of a getUserMedia call.
Since that selector does not affect the current getUserMedia call, it
is better to have it disabled, which is already the case with video
devices.

BUG=708081

Review-Url: https://codereview.chromium.org/2812903002
Cr-Commit-Position: refs/heads/master@{#463624}

Former-commit-id: 82382cca8c9aa804acb7fd9cfaa6e4478f92cd7d